[tool.poetry]
name = "finalproject"
version = "0.1.0"
description = ""CLI application for trading fiat and cryptocurrencies"
authors = ["Sergey Iguminov <Sergey.iguminov@yandex.ru>"]
readme = "README.md"

packages = [
    {include = "valutatrade_hub"},
    {include = "data"},
]

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"
